--- a/busca.html
+++ b/busca.html
@@ -33,7 +33,7 @@
                 value=""
                 placeholder="serch..."
               />
-              <button id="arrombado">
+              <button id="botão">
               <i class="fa-solid fa-magnifying-glass"></i>
             </button>
             </div>
