--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -19,7 +19,7 @@
       </div>
       <div class="form-content">
         <label for="text">Data de nascimento</label>
-        <input type="date" id="birthday">
+        <input type="date" id="aniversario">
       </div>
       <div class="form-content">
         <label for="text">Email</label>
@@ -35,7 +35,7 @@
       </div>
       <div class="form-content">
         <label for="text">Estado</label>
-        <select name="" id="">
+        <select name="Estado" id="Estado">
             <option value="">Rio Grande do Sul</option>
             <option value="">São Paulo</option>
             <option value="">Santa Catarina</option>
@@ -46,8 +46,10 @@
       </div>
       <div class="form-content">
         <label for="text">Cidade</label>
-        <input type="text" id="nome7" name="Cidade">
+        <input type="text" id="Cidade" name="Cidade">
+        <button>
         <input type="button" value="Cadastrar" id="nome1">
+        </button>
       </div>
       </form>  
 
