--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -1,59 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cadastro de pessoas</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cadastro</title>
+  <link rel="stylesheet" href="">
+  <style>
+    body{
+      font-family: Arial, Helvetica, sans-serif;
+      background-image: linear-gradient(45deg, blue, white, black);
+    }
+    .box{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 15px;
+      border-radius: 15px;
+      width: 30%;
+      color: white;
+    }
+    fieldset{
+      border: 3px solid dodgerblue;
+    }
+    legend{
+      border: 1px solid dodgerblue;
+      padding: 10px;
+      text-align: center;
+      background-color: dodgerblue;
+      border-radius: 8px;
+    }
+    .inputBox{
+      position: relative;
+    }
+    .inputUser{
+      background: none;
+      border: none;
+      border-bottom: 1px solid white;
+      outline: none;
+      color: white;
+      font-size: 15px;
+      width: 100%;
+      letter-spacing: 2px;
+    }
+   
+    .inputUser:focus ~ .labelInput{
+      top: -20px;
+      font-size: 12px;
+      color: dodgerblue;
+    }
+    #data_nascimento{
+      border: none;
+      padding: 8px;
+      border-radius: 10px;
+      outline: none;
+      font-size: 15px;
+    }
+    #submit{
+      background-image: linear-gradient(70deg, rgb(0,92,197), rgb(90,20,220));
+      width: 100%;
+      border: none;
+      padding: 15px;
+      color: white;
+      font-size: 15px;
+      cursor: pointer;
+      border-radius: 10px;
+    }
+    #submit:hover{
+      background-image: linear-gradient(70deg, rgb(0, 80, 172), rgb(80, 19, 195));
+    }
+
+  </style>
 </head>
-<body id="cadastro">
-  <div class="conteiner">
-    <div class="header">
-      <h1>Cadastro</h1>
-    </div>
-
-      <form id="form" action="form">
-      <div class="form-content">
-        <label for="text">Nome completo</label>
-        <input type="text" id="name" placeholder="Digite seu nome completo">
-      </div>
-      <div class="form-content">
-        <label for="text">Data de nascimento</label>
-        <input type="date" id="aniversario">
-      </div>
-      <div class="form-content">
-        <label for="text">Email</label>
-        <input type="text" id="Email" placeholder="Digite seu Email">
-      </div>
-      <div class="form-content">
-        <label for="text">Telefone</label>
-        <input type="text" id="Telefone" placeholder="Digite seu Telefone">
-      </div>
-      <div class="form-content">
-        <label for="text">Endereço</label>
-        <input type="text" id="Endereço">
-      </div>
-      <div class="form-content">
-        <label for="text">Estado</label>
-        <select name="Estado" id="Estado">
-            <option value="">Rio Grande do Sul</option>
-            <option value="">São Paulo</option>
-            <option value="">Santa Catarina</option>
-            <option value="">Parana</option>
-            <option value="">Rio de Janeiro</option>
-            <option value="">Minas Gerais</option>
-        </select>
-      </div>
-      <div class="form-content">
-        <label for="text">Cidade</label>
-        <input type="text" id="Cidade" name="Cidade">
-        <button>
-        <input type="button" value="Cadastrar" id="nome1">
-        </button>
-      </div>
-      </form>  
-
-</div>
-</form>
+<body>
+  <div class="box">
+      <form action="">
+        <fieldset>
+          <legend><b>Cadastro</b></legend>
+          <br>
+          <div class="inputbox">
+            <input type="text" id="nome" name="nome" class="inputUser" required>
+            <label for="nome" class="labelInput">Nome completo</label>
+          </div>
+          <br><br>
+          <div class="inputbox">
+            <input type="text" id="email" name="email" class="inputUser" required>
+            <label for="email" class="labelInput">Email</label>
+          </div>
+          <br><br>
+          <div class="inputbox">
+            <input type="tel" id="telefone" name="telefone" class="inputUser" required>
+            <label for="telefone" class="labelInput">Telefone</label>
+          </div>
+          <br><br>
+          <label for="data_nascimento"><b>Data de nascimento:</b></label>
+          <input type="date" id="data_nascimento" name="data_nascimento" required>
+          <br><br>
+          <div class="inputbox">
+            <input type="text" id="estado" name="estado" class="inputUser" required>
+            <label for="estado" class="labelInput">Estado</label>
+          </div>          
+          <br><br>
+          <div class="inputbox">
+            <input type="text" id="cidade" name="cidade" class="inputUser" required>
+            <label for="cidade" class="labelInput">Cidade</label>
+          </div>
+          <br><br>
+          <div class="inputbox">
+            <input type="text" id="endereco" name="endereco" class="inputUser" required>
+            <label for="endereco" class="labelInput">Endereço</label>
+          </div>
+          <br><br>
+          <input type="submit" name="submit" id="submit">
+        </fieldset>
+      </form>
+  </div>
 </body>
 </html>
