--- a/login.html
+++ b/login.html
@@ -3,14 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-image: linear-gradient(45deg, blue, white, black);
+        }
+        div{
+            background-color: rgba(0, 0, 0, 0.9);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 80px;
+            border-radius: 15px;
+            color: white;
+        }
+        input{
+        padding: 15px;
+        border: none;
+        outline: none;
+        font-size: 15px;
+        }
+        button{
+            background-color: dodgerblue;
+            border: none;
+            padding: 15px;
+            width: 100%;
+            border-radius: 10px;
+            color: white;
+            font-size: 15px;
+            cursor: pointer;
+        }
+        button:hover{
+            background-color: deepskyblue;
+        }
+    </style>
 </head>
 <body>
+   <div>
     <h1>Login</h1>
-    <hr>
-    <form action="">
+    <input type="text" placeholder="nome">
+    <br><br>
+    <input type="password" placeholder="senha">
+    <br><br>
+    <button>Enviar</button>
+   </div>
 
-    </form>
 </body>
 </html>
