--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h1>Formulários</h1>
     <hr>
     <ul>
+        <li><a href="login.html">Login</a></li>
         <li><a href="cad-pessoa.html">Cadastro de pessoas</a></li>
-        <li><a href="busca.html">busca</a></li>
-        <li><a href="login.html">login</a></li>
+        <li><a href="busca.html">Busca</a></li>
+        
     </ul>
 
 </form>
